tests/typing/good/testfile-variance-7.scala

class List[+T] {}
class A[+U, S <: List[U]] {}
object Main { def main(args: Array[String]) { } }
