tests/typing/bad/testfile-variance-4.scala

class T[+A, B>:A] {}
object Main { def main(args: Array[String]) { } }
